--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.6",
+    "components": "^0.1.0",
     "gatsby": "^4.9.0",
+    "gatsby-plugin-styled-components": "^5.9.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.3.3"
   }
 }
