--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "babel-plugin-styled-components": "^2.0.6",
     "components": "^0.1.0",
     "gatsby": "^4.9.0",
+    "gatsby-plugin-image": "^2.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-plugin-styled-components": "^5.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
