--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "babel-plugin-styled-components": "^2.0.6",
     "components": "^0.1.0",
     "gatsby": "^4.9.0",
